objects/Target__c.object
<CustomObject>
    <description>This object contains the target information</description>
    <fields>
        <fullName>Area_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Name</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CityProductCode__c</fullName>
        <description>This stores the city product code</description>
        <label>CityProductCode</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>This stores the Product Category</description>
        <label>Product Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>This stores Product Code</description>
        <label>Product Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look up to Product.</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Amount_CIBIL_Logins__c</fullName>
        <description>This stores Target Amount(CIBIL Logins)</description>
        <label>Target Amount(CIBIL Logins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Amount_Disbursement__c</fullName>
        <description>This stores Target Amount(Disbursement)</description>
        <label>Target Amount(Disbursement)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <description>This stores the Target Amount</description>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Numbers_CIBIL_Logins__c</fullName>
        <description>This stores Target Numbers(CIBIL Logins)</description>
        <label>Target Numbers(CIBIL Logins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Numbers_Disbursement__c</fullName>
        <description>This stores Target Numbers(Disbursement)</description>
        <label>Target Numbers(Disbursement)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Numbers__c</fullName>
        <description>This stores Target Numbers</description>
        <label>Target Numbers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>